--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,76 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: #2a2f35!important;
+  color: #fefefe!important;
+  font-family: russo_oneregular, bpg_nino_mtavrulibold, 'Rubik', serif !important;
+}
+
+.gallery__container > div {
+  margin-right: 0!important;
+  margin-left: 0!important;
+
+}
+
+p {
+  margin-bottom: 0!important;
+}
+
+a {
+  text-decoration: none!important;
+}
+
+a:visited {
+  color: unset;
+}
+
+
+
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
+}
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+@font-face {
+  font-family: 'russo_oneregular';
+  src: url('assets/fonts/russoone-regular-webfont.woff2') format('woff2'),
+  url('assets/fonts/russoone-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'bpg_nino_mtavrulibold';
+  src: url('assets/fonts/bpg_nino_mtavruli_bold.woff2') format('woff2'),
+  url('assets/fonts/bpg_nino_mtavruli_bold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
