add under construction page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
+<!--<div>-->
+<!--  <app-navbar></app-navbar>-->
+<!--  <div class="padding">-->
+<!--    <router-outlet></router-outlet>-->
+<!--  </div>-->
+<!--  <app-footer></app-footer>-->
+<!--</div>-->
+
 <div>
-  <app-navbar></app-navbar>
-  <div class="padding">
-    <router-outlet></router-outlet>
-  </div>
-  <app-footer></app-footer>
+  <app-under-construction></app-under-construction>
 </div>
 
 <div class="loader" *ngIf="isLoading | async"></div>
