update to angular v15 -> v16 add pwa

--- a/src/app/core/components/gallery/gallery.component.html
+++ b/src/app/core/components/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<ngxps-lightbox></ngxps-lightbox>
+<!--<ngxps-lightbox></ngxps-lightbox>-->
 
 <!--<ngxps-gallery-->
 <!--  class="gallery__container"-->
